# TrendsAI

./: 8huly -1.xlsx  8huly.xlsx  Trendsfeed(Keywords)-1.xlsx  Trendsfeed(Keywords)-2.xlsx  Trendsfeed(Keywords).xlsx  ai.py  app.py  data-1.xlsx  data-2.xlsx  data-3.xlsx  data-4.xlsx  data.json  data.py  data.xlsx  datajson.py  exceltojson.py  keywords-3.xlsx  keywords-4.xlsx  keywords-5.xlsx  oldversion.txt  requirements.txt  tags.json  tags.py  test.html  testing.html  trendsai.txt
trends_ai/: datajson.py  pyproject.toml  tags.json
trends_ai_api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
